model as record